--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Ellyn Anderson</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Tag Line</p>
@@ -130,69 +130,19 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Helen Marshall</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">You are enough.</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>I graduated from Whitman College in 2011 with a psychology degree. Since then I’ve spent a little time in the social work field, and then 2.5 years in administrative work. Just quit that to pursue this dream - coding/programming is one of the first things to make me truly jazzed and excited about the possibilities of the road of like ahead of me.</p>
                 </div>
                 <div class="clear"></div>
               </li>
               <!-- End Student 2 -->
-
-              <!-- Begin Student 3 -->
-              <li class="home-blog-post">
-                <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
-                  </a>
-                </div>
-
-                <div class="blog-title">
-                  <div class="big-comment">
-                    <h3>
-                      <a href="students/student_name.html">Student Name</a>
-                    </h3>
-                  </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
-                </div>
-                <div class="clear"></div>
-
-                <div class="excerpt">
-                  <p>Excerpt.</p>
-                </div>
-                <div class="clear"></div>
-              </li>
-              <!-- End Student 3 -->
-
-              <!-- Begin Student 4 -->
-              <li class="home-blog-post">
-                <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
-                  </a>
-                </div>
-
-                <div class="blog-title">
-                  <div class="big-comment">
-                    <h3>
-                      <a href="students/student_name.html">Student Name</a>
-                    </h3>
-                  </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
-                </div>
-                <div class="clear"></div>
-
-                <div class="excerpt">
-                  <p>Excerpt.</p>
-                </div>
-                <div class="clear"></div>
-              </li>
-              <!-- End Student 4 -->
 
               <!-- Duplicate li code block above to place more students here -->
 
