--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <!-- Begin Student 1 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
+                  <a href="eka249.github.io">
                     <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
@@ -105,7 +105,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Ellyn Anderson</a>
+                      <a href="https://www.linkedin.com/in/Ellynanderson/">Ellyn Anderson</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Tag Line</p>
@@ -123,7 +123,7 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students/helenphoto.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
