--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students/EA_headshot.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
@@ -122,15 +122,15 @@
               <!-- Begin Student 2 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="https://github.com/marshallhelenm">
+                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="Helen Marshall">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Helen Marshall</a>
+                      <a href="https://www.linkedin.com/in/helenmmarshall/">Helen Marshall</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">You are enough.</p>
