--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                       <a href="https://www.linkedin.com/in/Ellynanderson/">Ellyn Anderson</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">She's working on it.</p>
                 </div>
                 <div class="clear"></div>
 
