--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="https://github.com/marshallhelenm">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="Helen Marshall">
+                    <img width="304" height="304" class="prof-image" src="sidewalk.jpg" class="attachment-blog-thumb wp-post-image" alt="Helen Marshall">
                   </a>
                 </div>
 
