--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
                       <a href="https://www.linkedin.com/in/Ellynanderson/">Ellyn Anderson</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">She's working on it.</p>
+                  <p class="home-blog-post-meta">Never stop learning.</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>I am a graduate of NYU Poly with a ChemE degree. When entering the work force, the practical work did not align with my interests. I want a job that is enjoyable, requires constant learning, and crucial for society. Flatiron School is leading me to my goal.</p>
                 </div>
                 <div class="clear"></div>
               </li>
