fixing stanley.html file

--- a/students/stanley.html
+++ b/students/stanley.html
@@ -98,14 +98,14 @@
             <!-- Begin Splash Image -->
             <div class="top-page-title">
                 <div>
-                    <img src="../img/students/stanley_luong_profile.jpg" class="student_pic">
+                    <img src="../img/students/student_name_profile.jpg" class="student_pic">
                 </div>
             </div>
             <! -- End Splash Image -->
 
                 <!-- Begin Title Content -->
                 <div class="page-title">
-                    <h4 class="ib_main_header">Stanley Luong</h4>
+                    <h4 class="ib_main_header">Student Name</h4>
                     <div class="social-icons">
                         <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
                         <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
@@ -118,7 +118,8 @@
                             <ul class="testimonials slides">
                                 <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                                     <div class="textwidget">
-                                        <h3>wannabecoder.</h3>
+                                        <h3>"Quote It was the best of times it was meh." -- someone smart said this.
+                                        </h3>
                                     </div>
                                 </li>
                             </ul>
@@ -144,7 +145,9 @@
                                     </div>
                                     <div class="clear"></div>
                                     <p>
-                                        I like movies.
+                                        Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim
+                                        veniam, quis nostrud exercitation ullamco laboris nisi ut.
                                     </p>
                                 </div>
                             </div>
@@ -156,7 +159,7 @@
                                     </div>
                                     <div class="clear"></div>
                                     <ul>
-                                        <li>University of Washington - Comp Lit/Cinema/Education</li>
+                                        <li>University</li>
                                         <li>Other School</li>
                                     </ul>
                                 </div>
@@ -168,7 +171,7 @@
                                         <h3>Work</h3>
                                     </div>
                                     <div class="clear"></div>
-                                    <h4>Amazon Image Recognition</h4>
+                                    <h4>Some Company</h4>
                                     <p>
                                         Blurb about company...
                                     </p>
