--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/EA_headshot.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students/EA_headshot.jpeg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
@@ -123,7 +123,7 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="https://github.com/marshallhelenm">
-                    <img width="304" height="304" class="prof-image" src="sidewalk.jpg" class="attachment-blog-thumb wp-post-image" alt="Helen Marshall">
+                    <img width="304" height="304" class="prof-image" src="img/helenphoto.jpg" class="attachment-blog-thumb wp-post-image" alt="Helen Marshall">
                   </a>
                 </div>
 
