2nd attempt at link change

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <!-- Begin Student 1 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="https://github.com/ellynanderson">
+                  <a href="https://github.com/eka249">
                     <img width="304" height="304" class="prof-image" src="img/students/EA_headshot.jpeg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
