commit Helen picture

--- a/students/helen_marshall.html
+++ b/students/helen_marshall.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/student_name_background.jpg) no-repeat top center;
+      background: url(../img/helen_background.jpg) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -148,7 +148,7 @@
                 <div class="clear"></div>
                 <ul>
                   <li>Whitman College</li>
-                  <li>Other School</li>
+
                 </ul>
               </div>
             </div>
@@ -273,8 +273,8 @@
                   <div class="clear"></div>
                   <p>
                     - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Comic: <a href="https://diggercomic.com/">Site 2</a><br>
+                    - Favorite Podcast: <a href="https://www.maximumfun.org/shows/adventure-zone">The Adventure Zone</a><br>
                   </p>
                 </div>
               </div>
