--- a/students/Ellyn.html
+++ b/students/Ellyn.html
@@ -94,7 +94,7 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/student_name_profile.jpg" class="student_pic">
+          <img src="../img/students/EA_headshot.jpeg" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
@@ -104,7 +104,7 @@
         <h4 class="ib_main_header">Student Name</h4>
         <div class="social-icons">
           <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
-          <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
+          <a href="https://www.linkedin.com/in/Ellynanderson/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
           <a href="https://github.com/"><i class="icon-github ib-social-icons"></i></a>
           <a href="#"><i class="icon-rss ib-social-icons"></i></a>
         </div>
