--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <!-- Begin Student 2 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="https://github.com/marshallhelenm">
+                  <a href="students/helen_marshall.html">
                     <img width="304" height="304" class="prof-image" src="img/helenphoto.jpg" class="attachment-blog-thumb wp-post-image" alt="Helen Marshall">
                   </a>
                 </div>
